# ai-sre-copilot

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_LOG.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  discussion_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py  config.py
backend/agents/: __init__.py  agent.py  coordinator.py  escalation.py  evaluator.py  intake.py  log_analyzer.py  recovery_planner.py  report_generator.py  root_cause.py  triage.py
backend/api/: __init__.py  dto.py  main.py  routes.py  security_routes.py  websocket.py
backend/events/: __init__.py  event_bus.py
backend/mcp_servers/: __init__.py  incident_server.py  monitoring_server.py
backend/memory/: __init__.py  case_file.py  lifecycle.py  session.py
backend/persistence/: __init__.py  base.py  json_store.py
backend/security/: __init__.py  audit_logger.py  input_validator.py  pii_redactor.py  rate_limiter.py  tool_firewall.py  ws_security.py
backend/services/: orchestrator.py
backend/utils/: __init__.py  (+1 more)
contracts/: openapi.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json
scripts/: generate_diagrams.py  generate_openapi.py
tests/: __init__.py  test_agents.py  test_api.py  test_contract.py  test_lifecycle.py  test_mcp.py  test_memory.py  test_persistence.py  test_security.py  test_utils.py
(+22 files in other folders)
