[project]
name = "ai-sre-copilot"
version = "0.1.0"
description = "Autonomous SRE Copilot for Kaggle AI Agents Intensive Capstone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "google-genai>=2.8.0",
    "mcp>=1.0.0,<2.0.0",
    "google-adk>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.4.0,<1.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501", "E402", "B008", "B904"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
